# Sandboxia2D

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MODDING.md  README.md  makefile
include/: collision.h  entity.h  game.h  main.h  mod.h  mod_api.h  player.h  render.h  world.h
include/SDL3_image/: SDL_image.h
include/Sandboxia/: audio.h  input.h  player.h  renderer.h  ui.h  world.h
include/glad/: glad.h
legacy/glad/glad/: glad.h
legacy/renderer/: renderer.cpp  renderer.h
mods/: main.lua  testmod.cpp
sandboxia2d-win64/: README.md
src/: audio.cpp  collision.c  entity.c  game.c  glad.c  input.cpp  main.c  main.cpp  mod.c  mod_api.cpp  player.c  player.cpp  render.c  renderer.cpp  ui.cpp  world.c  world.cpp
src/glad/: glad.c
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_tables.cpp  imgui_widgets.cpp
